// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`vaultAdapter1Password given: [case7] vault error message output when: [t0] exid references non-keyrack vault then: error message matches snapshot 1`] = `
"
🔐 keyrack
   └─ ✗ 1password vault must be named 'keyrack'

   provided: op://Personal/stripe-key/credential
   expected: op://keyrack/...

   why:
   dev machines are supply chain attack vectors.
   1password is incapable of per-item authorization.
   therefore, keyrack enforces blast-radius limits: dedicated account, dedicated vault.

   (if you need personal creds, use a flatpak-sandboxed browser with 1password)

   to fix:
   1. create a vault named 'keyrack' in your keyrack 1password account
   2. move or copy the item to the 'keyrack' vault
   3. copy the new secret reference: op://keyrack/item/field

   if this bugs you, ask 1password for per-item auth (extract one key, dont unlock vault):
   https://1password.community/discussion/134015/feature-request-account-password-prompt-for-selected-passwords-or-secure-notes
"
`;

exports[`vaultAdapter1Password given: [case8] account error message output when: [t0] account is not keyrack then: error message matches snapshot 1`] = `
"
🔐 keyrack
   └─ ✗ 1password account name must include 'keyrack'

   provided: vlad@example.com (https://personal.1password.com)
   expected: 'keyrack' in email or account url

   why:
   dev machines are supply chain attack vectors.
   1password is incapable of per-item authorization.
   therefore, keyrack enforces blast-radius limits: dedicated account, dedicated vault.

   (if you need personal creds, use a flatpak-sandboxed browser with 1password)

   to fix:
   1. create a 1password account with 'keyrack' in its name
   2. sign into that account: op account add --address keyrack.1password.com
   3. switch to that account: op signin --account keyrack

   if this bugs you, ask 1password for per-item auth (extract one key, dont unlock vault):
   https://1password.community/discussion/134015/feature-request-account-password-prompt-for-selected-passwords-or-secure-notes
"
`;
